@@ -157,6 +157,7 @@ Chronological list of authors
   - Leonardo Barneschi
   - Henrik Jäger
   - Jan Stevens
+  - Orion Cohen
 
 External code
 -------------
